--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        working-directory: ./api
 
       - name: Run Jest tests
         run: npm test  # Make sure this runs Jest
