--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,11 +6,11 @@ on:
 
 jobs:
   test:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     services:
       mongo:
-        image: mongo:5
+        image: mongo:6
         ports:
           - 27017:27017
 
