--- a/api/package.json
+++ b/api/package.json
@@ -20,7 +20,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "resend": "^6.8.0"
   },
   "devDependencies": {
     "jest": "^29.6.2",
