--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "path": "^0.12.7",
