--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,4 +31,4 @@ jobs:
         run: npm run test
         working-directory: ./api
         env:
-          MONGODB_URI: mongodb://0.0.0.0/jumper-generator-test-database
+          MONGODB_URL: mongodb://0.0.0.0/jumper-generator-test-database
