--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    environment: env.test
 
     services:
       mongo:
@@ -32,3 +33,5 @@ jobs:
         working-directory: ./api
         env:
           MONGODB_URL: mongodb://0.0.0.0/jumper-generator-test-database
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
